new-registry-api-openshift/env/dev/deployment.api_env.patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: photo-sharing-api
spec:
  template:
    spec:
      containers:
        - name: photo-sharing-api
