new-registry-api-openshift/env/dev/route.dev.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: platsrv-registry-api
spec:
  host: platsrv-registry-api-101ed4.apps.silver.devops.gov.bc.ca
